# Computer-Vision-Project

./: .gitignore  CMakeLists.txt  README.md
include/: colorSuppression.h  customHoughDetector.h  displayMat.h  fieldSegmentation.h  imageProcessing.h  mostFrequentColorFiltering.h  playerDetection.h  playerSegmentation.h  playerTeam.h
model/: model.yml
src/: MeanShift.cpp  colorSuppression.cpp  customHoughDetector.cpp  displayMat.cpp  fieldSegmentation.cpp  imageProcessing.cpp  main.cpp  mostFrequentColorFiltering.cpp  playerDetection.cpp  playerSegmentation.cpp  playerTeam.cpp  trainModel.cpp
